# arcprize24

./: .gitignore  README.md  pyproject.toml  requirements.txt  score.json  todo.md
arcprize/: asyncio_oai.py  config.py  eval.py  helpers.py  main.py  render.py
notebooks/: grid2image.ipynb  prompts.ipynb  score.ipynb  visualize.ipynb
output/: submission.json
